# libtriton_jit

./: .gitignore  CMakeLists.txt  INSTALL.md  POLICY_BASED_QUICK_START.md  README.md  WEEK1_COMPLETION_REPORT.md
cmake/: BackendCUDA.cmake  BackendHCU.cmake  BackendKunlunxin.cmake  BackendMLU.cmake  BackendMUSA.cmake  BackendNPU.cmake  Config.cmake.in
examples/: CMakeLists.txt
examples/arg_handle/: CMakeLists.txt  axpy_op.cpp  axpy_op.h  test_axpy.cpp
examples/common/: backend_ops.h  kernel_config.h  op_registration.h
examples/pointwise/: CMakeLists.txt  add.py  add_op.cpp  add_op.h  test_add.cpp
examples/reduce/: CMakeLists.txt  sum.py  sum_op.cpp  sum_op.h  test_sum.cpp
include/triton_jit/: backend_config.h  backend_policy.h  jit_utils.h  kernel_metadata.h  triton_jit_function.h  triton_jit_function_impl.h  triton_kernel.h  triton_kernel_impl.h
include/triton_jit/backends/: cuda_backend.h  hcu_backend.h  ix_backend.h  kunlunxin_backend.h  mlu_backend.h  musa_backend.h  npu_arg_buffer.h  npu_backend.h  npu_types.h
operators/: CMakeLists.txt
operators/common/: CMakeLists.txt  backend_ops.h  benchmark_utils.h  kernel_config.h  op_registration.h  report_generator.h  test_framework.cpp  test_framework.h
operators/fusion/: CMakeLists.txt
operators/fusion/apply_rotary_pos_emb/: apply_rotary_pos_emb.py  apply_rotary_pos_emb_op.cpp  apply_rotary_pos_emb_op.h  test_apply_rotary_pos_emb.cpp
operators/fusion/rwkv_ka_fusion/: rwkv_ka_fusion.py  rwkv_ka_fusion_op.cpp  rwkv_ka_fusion_op.h  test_rwkv_ka_fusion.cpp
operators/fusion/rwkv_mm_sparsity/: rwkv_mm_sparsity.py  rwkv_mm_sparsity_op.cpp  rwkv_mm_sparsity_op.h  test_rwkv_mm_sparsity.cpp
operators/index/: CMakeLists.txt
operators/index/cat/: cat.py  cat_op.cpp  cat_op.h  test_cat.cpp
operators/index/embedding/: embedding.py  embedding_op.cpp  embedding_op.h  test_embedding.cpp
operators/index/nonzero/: nonzero.py  nonzero_op.cpp  nonzero_op.h  test_nonzero.cpp
operators/index/reshape_and_cache_flash/: reshape_and_cache_flash.py  reshape_and_cache_flash_op.cpp  reshape_and_cache_flash_op.h  test_reshape_and_cache_flash.cpp
operators/matmul/: CMakeLists.txt
operators/matmul/addmm/: addmm.py  addmm_op.cpp  addmm_op.h  test_addmm.cpp
operators/matmul/bmm/: bmm.py  bmm_op.cpp  bmm_op.h  test_bmm.cpp
operators/matmul/mm/: mm.py  mm_op.cpp  mm_op.h  test_mm.cpp
operators/normalization/: CMakeLists.txt
operators/normalization/fused_add_rms_norm/: fused_add_rms_norm.py  fused_add_rms_norm_op.cpp  fused_add_rms_norm_op.h  test_fused_add_rms_norm.cpp
operators/normalization/rms_norm/: rms_norm.py  rms_norm_op.cpp  rms_norm_op.h  test_rms_norm.cpp
operators/normalization/softmax/: softmax.py  softmax_op.cpp  softmax_op.h  test_softmax.cpp
operators/pointwise/: CMakeLists.txt
operators/pointwise/add/: add_op.cpp  test_add.cpp
operators/pointwise/contiguous/: contiguous.py  contiguous_op.cpp  contiguous_op.h  test_contiguous.cpp
operators/pointwise/exponential_/: exponential_.py  exponential_op.cpp  exponential_op.h  test_exponential_.cpp
operators/pointwise/fill/: fill.py  fill_op.cpp  fill_op.h  test_fill.cpp
operators/pointwise/fill_/: fill_.py  fill_op.cpp  fill_op.h  test_fill_.cpp
operators/pointwise/zeros/: test_zeros.cpp  zeros.py  zeros_op.cpp  zeros_op.h
operators/reduce/: CMakeLists.txt
operators/reduce/argmax/: argmax.py  argmax_op.cpp  argmax_op.h  test_argmax.cpp
operators/reduce/max/: max.py  max_op.cpp  max_op.h  test_max.cpp
operators/reduce/sum/: sum_op.cpp  test_sum.cpp
operators/reduce/topk/: test_topk.cpp  topk.py  topk_op.cpp  topk_op.h
scripts/: standalone_compile.py
src/: CMakeLists.txt  jit_utils.cpp  kernel_metadata.cpp  triton_jit_function.cpp  triton_jit_function_impl.cpp  triton_kernel.cpp
tests/: CMakeLists.txt  run_all_tests.py  test_concepts.cpp
tests/configs/: default.json  quick.json
